# asteroid-gps-test

./: CMakeLists.txt  README.md  asteroid-gps-test.desktop.template  asteroid-gps-test.in  asteroid-gps-test.pro  main.qml
i18n/: asteroid-gps-test.desktop.h
src/: CMakeLists.txt  main.qml
